kubernetes/yaml/demo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
